--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app"
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.10
       - key: PORT
         value: 10000
